--- a/slides/lecture12.qmd
+++ b/slides/lecture12.qmd
@@ -1,5 +1,7 @@
 ---
 title: "Stochastic Gradient Descent"
+execute:
+  cache: false
 ---
 
 {{< include _common.qmd >}}
@@ -10,6 +12,10 @@ library(patchwork)
 
 set.seed(1422)
 ```
+
+## Last Time
+
+### The Expectation-Maximization (EM) Algorithm
 
 ## Today
 
@@ -24,7 +30,9 @@ Can be used in a **mini-batch** version.
 ## Minimizing Sums
 
 Many of the functions we are trying to minimize are of the form
-$$\frac{1}{n} \sum_{i=1}^n f_i(x).$$
+$$
+\frac{1}{n} \sum_{i=1}^n f_i(x).
+$$
 
 . . .
 
@@ -35,16 +43,24 @@ $$\frac{1}{n} \sum_{i=1}^n f_i(x).$$
 ### Gradient Descent
 
 Since $\nabla \left(\sum_{i=1}^n f_i(x)\right) = \sum_{i=1}^n \nabla f_i(x)$, GD
-steps are $$x_{k+1} = x_k - \gamma \sum_{i=1}^n \nabla f_i(x_k).$$
+steps are
+$$
+x_{k+1} = x_k - t \sum_{i=1}^n \nabla f_i(x_k).
+$$
 
 :::
+
+. . .
 
 ::: {.column width="47%"}
 
 ### Stochastic Gradient Descent
 
-SGD instead takes steps $$x_{k+1} = x_k - \gamma \nabla f_{i}(x_k)$$ where $i$
-is an index in $\{1, \ldots, n\}$ drawn at random.
+SGD instead takes steps
+$$
+x_{k+1} = x_k - t \nabla f_{i}(x_k)
+$$
+where $i$ is an index in $\{1, \ldots, n\}$ drawn at random.
 
 :::
 
@@ -53,30 +69,38 @@ is an index in $\{1, \ldots, n\}$ drawn at random.
 ## Unbiasedness
 
 If $i$ is drawn uniformly at random from $\{1, \ldots, n\}$ then
-$$\operatorname{E}(\nabla f_i(x)) = \nabla f(x).$$
+$$
+\operatorname{E}(\nabla f_i(x)) = \nabla f(x).
+$$
 
 So SGD gradients are **unbiased** estimates of the full gradient.
 
 . . .
 
-## Motivation
+### Motivation
 
 Why consider SGD?
 
 - Iteration cost is lower: $O(p)$ vs. $O(np)$.
 - Can be more robust to local minima.
 
-### Example: Logistic Regression
+## Example: Logistic Regression
 
 :::: {.columns}
 
 ::: {.column width="47%"}
 
-We have $$f_i(\beta) = \log(1 + e^{-y_i x^T_i \beta})$$ and
-$$\nabla f_i(\beta) = - \frac{y_i x_i}{1 + e^{y_i x^T_i \beta}}.$$
+We have
+$$
+f_i(\beta) = \log(1 + e^{-y_i x^T_i \beta})
+$$
+and
+$$
+\nabla f_i(\beta) = - \frac{y_i x_i}{1 + e^{y_i x^T_i \beta}}.
+$$
 
-SGD typically converges quickly at the start but slows down as it approaches the
-minimum.
+SGD typically converges quickly at the start but slows down as it approaches
+the minimum.
 
 :::
 
@@ -88,113 +112,147 @@ minimum.
 
 ::::
 
+##
+
 ![](../images/lecture12-gd-sgd-convergence1.png)
+
+##
 
 ![](../images/lecture12-gd-sgd-convergence2.png)
 
 ## The Robbins–Monro Convergence Theorem
 
 Suppose $f$ is strongly convex and
-$$\operatorname{E}(\rVert \nabla f(x))\lVert_2^2) \leq A + B \lVert x\rVert_2^2$$
-for some constants $A$ and $B$. If $x^*$ is the global minimizer of $f$ then
-$x_n$ converges almost surely toward $x^*$ if \begin{equation*}
-\sum*{k=1}^{\infty} \gamma_k^2 < \infty \quad \text{and} \quad
-\sum*{k=1}^{\infty} \gamma_k = \infty. \end{equation*}
+$$
+\operatorname{E}\big(\rVert \nabla f(x)\lVert_2^2)\big) \leq A + B \lVert x\rVert_2^2
+$$
+for some constants $A$ and $B$. If $x^*$ is the global minimizer of $f$
+then $x_n$ converges almost surely toward $x^*$ if
+$$
+\sum_{k=1}^{\infty} t_k^2 < \infty \quad \text{and} \quad
+\sum_{k=1}^{\infty} t_k = \infty.
+$$
 
 . . .
 
 The theorem applies to learning rates satisfying
-$$\gamma_k \propto \frac{1}{k}.$$
+$$
+t_k \propto \frac{1}{k}.
+$$
 
-### Diminishing Step Sizes
+## Diminishing Step Sizes
 
-Assume cyclic rule and set $\gamma_k = \gamma$ for $n$ updates. We get
-$$x_{k + n} = x_k - \gamma \sum_{i=1}^n \nabla f_i(x_{k + i - 1}).$$
+Assume cyclic rule and set $t_k = t$ for $n$ updates. We get
+$$
+x_{k + n} = x_k - t \sum_{i=1}^n \nabla f_i(x_{k + i - 1}).
+$$
 
 . . .
 
-Meanwhile, **full** gradient descent with step size $n\gamma$ would give
-$$x_{k + 1} = x_k - \gamma \sum_{i=1}^n \nabla f_i(x_k).$$
+Meanwhile, **full** gradient descent with step size $nt$ would give
+$$
+x_{k + 1} = x_k - t \sum_{i=1}^n \nabla f_i(x_k).
+$$
 
 . . .
 
 Difference between the two is
-$$\gamma \sum_{i=1}^n \left( \nabla f_i(x_{k + i - 1}) - \nabla f_i(x_k) \right)$$
-which does not tend to zero if $\gamma$ is constant.
+$$
+t \sum_{i=1}^n \left( \nabla f_i(x_{k + i - 1}) - \nabla f_i(x_k) \right)
+$$
+which does not tend to zero if $t$ is constant.
 
-### Convergence Rates
+## Convergence Rates
 
-#### Gradient Descent
+### Gradient Descent
 
 For convex $f$, GD with diminishing step sizes converges at rate
-$$f(x_n) - f^* = O(1/\sqrt{k}).$$
+$$
+f(x_n) - f^* = O(1/\sqrt{k}).
+$$
 
 . . .
 
 When $f$ is differentiable with Lipschitz gradient, we get
-$$f(x_n) - f^* = O(1/k).$$
+$$
+f(x_n) - f^* = O(1/k).
+$$
 
 . . .
 
-#### SGD
+### SGD
 
 For convex $f$ with diminishing step sizes, SGD converges at rate
-$$\operatorname{E}f(x_n) - f^* = O(1/\sqrt{k}).$$
+$$
+\operatorname{E}f(x_n) - f^* = O(1/\sqrt{k}).
+$$
 
 . . .
 
 But this **does not improve** when $f$ is differentiable with Lipschitz
 gradient.
 
-### Rates for Strongly Convex Functions
+## Rates for Strongly Convex Functions
 
 When $f$ is strongly convex and has Lipschitz gradient, GD satisfies
-$$f(x_n) - f^* = O(\delta^k), \qquad \delta \in (0, 1).$$
+$$
+f(x_n) - f^* = O(\delta^k), \qquad \delta \in (0, 1).
+$$
 
 . . .
 
-Under same conditions, SGD gives us $$\operatorname{E}(f(x_n) - f^*) = O(1/k).$$
+Under same conditions, SGD gives us
+$$
+\operatorname{E}(f(x_n) - f^*) = O(1/k).
+$$
 
 . . .
 
 So SGD does **not** enjoy linear convergence rates under strong convexity.
 
-## (Mini-)Batch Gradient Descent
+## Mini-Batch Gradient Descent
 
-Idea: take (mini-)batch $A_k$ of size $b$ of the data and iterate through
-$$x_{k+1} = x_k - \frac{\gamma}{b} \sum_{i \in A_k} \nabla f_i(x_k).$$
+Idea: take mini-batch $A_k$ of size $b$ of the data and iterate through
+$$
+x_{k+1} = x_k - \frac{t}{b} \sum_{i \in A_k} \nabla f_i(x_k).
+$$
 
 . . .
 
 Estimates are still unbiased,
-$$\operatorname{E}\frac{1}{b}\sum_{i \in A_k}\nabla f_i(x) = \nabla f(x),$$ but
-variance is reduced by a factor of $1/b$.
+$$
+\operatorname{E}\frac{1}{b}\sum_{i \in A_k}\nabla f_i(x) = \nabla f(x),
+$$
+but variance is reduced by a factor of
+$1/b$.
 
-. . .
+\medskip\pause
 
 Under Lipschitz gradient, rate goes from $O(1/\sqrt{k})$ to
-$O(1/\sqrt{bk} + 1/k)^3$.
+$O(1/\sqrt{bk} + 1/k)$.
 
-. . .
+\medskip\pause
 
 Typically more efficient than standard SGD for various computational reasons,
 but somewhat **less** robust to local minima.
+
+##
 
 ![](../images/lecture12-batch-sizes.png)
 
 ## So, Why Use SGD?
 
 - If $n \gg p$, then we can pick a batch size that is reasonably accurate but
-  still much smaller than $n$. --
-
+  still much smaller than $n$.
 - In many applications (e.g. deep learning), we don't care about optimizing to
-  high accuracy. --
-
+  high accuracy.
 - Stochastic gradients help us escape local minima.
 
 ## Learning Rate
 
-The learning rate $\gamma$ is crucial for SGD, but hard to set.
+The learning rate $t$ is crucial for SGD, but hard to set.
+
+\medskip\pause
 
 Convergence theorem does not give much of a hint.
 
@@ -202,42 +260,56 @@ Convergence theorem does not give much of a hint.
 
 ### A Class of Decay Schedules
 
-$$\gamma_k = \frac{\gamma_0 K}{K + k^a} = \frac{\gamma_0 }{1 + K^{-1} k^{a}}$$
-with initial learning rate $\gamma_0 > 0$ and constants $K, a > 0$.
+$$t_k = \frac{t_0 K}{K + k^a} = \frac{t_0 }{1 + K^{-1} k^{a}}$$
+with initial learning rate $t_0
+> 0$ and constants $K, a >
+0$.
 
-. . .
+\medskip\pause
 
 Convergence is ensured by Robbins–Monro if $a \in (0.5, 1]$.
 
-. . .
+\medskip\pause
 
-Fixing the exponent $a$ and picking a target rate, $\gamma_1$, to be reached
+Fixing the exponent $a$ and picking a target rate, $t_1$, to be reached
 after $k_1$ steps, we can solve for $K$ and get
-$$K = \frac{k_1^a \gamma_1}{\gamma_0 - \gamma_1}.$$
+$$K = \frac{k_1^a t_1}{t_0 - t_1}.$$
 
-```{r decay, cache = TRUE, echo = FALSE}
-decay_scheduler <- function(gamma0 = 1, a = 1, K = 1, gamma1, n1) {
+##
+
+```{r decay, cache = TRUE}
+decay_scheduler <- function(
+  t0 = 1,
+  a = 1,
+  K = 1,
+  t1 = NULL,
+  n1 = NULL
+) {
   force(a)
 
-  if (!missing(gamma1) && !missing(n1)) {
-    K <- n1^a * gamma1 / (gamma0 - gamma1)
+  if (!is.null(t1) && !is.null(n1)) {
+    K <- n1^a * t1 / (t0 - t1)
   }
 
-  b <- gamma0 * K
+  b <- t0 * K
 
   function(n) b / (K + n^a)
 }
 ```
 
-```{r decay-fig, echo=FALSE, dependson="decay", fig.height=5, fig.width=11, fig.cap="Examples of learning rate schedules."}
+##
+
+```{r decay-fig, echo=FALSE, dependson="decay", fig.cap="Examples of learning rate schedules."}
+#| fig-height: 3.2
+#| fig-width: 5.2
 grid_par <- expand.grid(
   n = seq(0, 1000, 2),
   K = c(25, 50, 100),
   a = c(0.6, 1),
-  gamma0 = 1
+  t0 = 1
 )
 
-grid_par <- dplyr::mutate(grid_par, rate = gamma0 * K / (K + n^a))
+grid_par <- dplyr::mutate(grid_par, rate = t0 * K / (K + n^a))
 
 p1 <- ggplot(grid_par, aes(n, rate, color = factor(K), linetype = factor(a))) +
   geom_line() +
@@ -249,10 +321,10 @@ grid_par <- expand.grid(
   n = seq(0, 1000, 2),
   K = c(1e4, 1e5, 1e6),
   a = c(2, 2.5),
-  gamma0 = 1
+  t0 = 1
 )
 
-grid_par <- dplyr::mutate(grid_par, rate = gamma0 * K / (K + n^a))
+grid_par <- dplyr::mutate(grid_par, rate = t0 * K / (K + n^a))
 
 p2 <- ggplot(grid_par, aes(n, rate, color = factor(K), linetype = factor(a))) +
   geom_line() +
@@ -263,11 +335,9 @@ p2 <- ggplot(grid_par, aes(n, rate, color = factor(K), linetype = factor(a))) +
 p1 + p2 + plot_layout(axes = "collect_y")
 ```
 
-### So, Is The Problem of Setting Learning Rate Solved?
+## So, Is The Problem of Setting Learning Rate Solved?
 
 No, unfortunately not
-
-. . .
 
 :::: {.columns}
 
@@ -276,6 +346,8 @@ No, unfortunately not
 ![](../images/lecture12-lrdecay-fast.png)
 
 :::
+
+. . .
 
 ::: {.column width="47%"}
 
@@ -302,17 +374,21 @@ For a linear model, $\mu(x_i, \beta) = x_i^T \beta$, and
 $\nabla_{\beta} \mu(x_i, \beta) = x_i$ so
 $$\nabla f_i(\beta) = - x_i (y_i - x_i^T \beta).$$
 
-### A Poisson Regression Model
+## A Poisson Regression Model
 
-$$Y_i \mid Z_i = z_i \sim \mathrm{Poisson(e^{\beta_0 + \beta_1 z_i})}$$ for
+$$
+Y_i \mid Z_i = z_i \sim \mathrm{Poisson}(e^{\beta_0 + \beta_1 z_i})
+$$ for
 $\beta = (\beta_0, \beta_1)^T$ and $Z_i$ uniformly distributed in $(-1, 1)$.
 
-. . .
+\medskip\pause
 
 The conditional mean of $Y_i$ given $Z_i = z_i$ is thus
-$$\mu(z_i, \beta) = e^{\beta_0 + \beta_1 z_i}.$$
+$$
+\mu(z_i, \beta) = e^{\beta_0 + \beta_1 z_i}.
+$$
 
-### Least Squares for the Poisson Model
+## Least Squares for the Poisson Model
 
 ```{r online-poisson-SG-SE0, echo=-1, cache = TRUE}
 set.seed(13102020)
@@ -325,11 +401,11 @@ beta <- vector("list", n)
 . . .
 
 ```{r online-poisson-SG-SE1}
-rate <- decay_scheduler(gamma0 = 0.0004, K = 100)
+rate <- decay_scheduler(t0 = 0.0004, K = 100)
 beta[[1]] <- c(beta0 = 1, beta1 = 1)
 ```
 
---
+##
 
 ```{r online-poisson-SG-SE, cache = TRUE}
 for (i in 2:n) {
@@ -352,11 +428,11 @@ beta_se <- cbind(
   data.frame(iteration = 1:n, loss = "squared error")
 )
 
-rate <- decay_scheduler(gamma0 = 0.01, K = 100)
+rate <- decay_scheduler(t0 = 0.01, K = 100)
 beta[[1]] <- c(beta0 = 1, beta1 = 1)
 ```
 
-. . .
+##
 
 ```{r online-poisson-SG-LL, dependson=c("online-poisson-SG-SE", "online-poisson-SG-LL0"), cache = TRUE}
 for (i in 2:n) {
@@ -370,7 +446,9 @@ for (i in 2:n) {
 beta[[n]] # Compare this to beta_true
 ```
 
-```{r pois-sgd, echo=FALSE, dependson="online_poisson_SG", warning=FALSE, fig.height=6, fig.width=11, fig.cap = "Convergence for Poisson regression model."}
+##
+
+```{r pois-sgd, echo=FALSE, dependson="online_poisson_SG", warning=FALSE, fig.height=3, fig.width=5.1, fig.cap = "Convergence for Poisson regression model."}
 beta_all <- rbind(
   cbind(
     as.data.frame(do.call(rbind, beta)),
@@ -392,27 +470,6 @@ ggplot(beta_all, aes(iteration, value, color = Parameter)) +
   scale_color_manual(values = c("blue", "red"))
 ```
 
-## Exercise
-
-- Implement an SGD algorithm to fit standard least-squares regression, i.e.
-  minimize $$\frac{1}{2n} \lVert y - X\beta\rVert_2^2.$$ --
-
-- Run the algorithm on a simple linear regression problem in two dimensions.
-- **mvtnorm::rmvnorm()** to generate $X$ from a multivariate Gaussian
-  distribution, specifying some non-diagonal covariance structure. --
-
-- Try to visualize both the convergence of the algorithm and the path it takes
-  in the parameter space. For the latter, try something like the following:
-
-```{r exercise-hint, eval = FALSE}
-beta1 <- seq(-1, 3, length = 100)
-beta2 <- seq(-1, 3, length = 100)
-loss_2d_vectorized <- Vectorize(function(b1, b2) loss_2d(b1, b2, X, y))
-z <- outer(beta1, beta2, loss_2d_vectorized)
-
-contour(beta1, beta2, z)
-```
-
 ## Implementation
 
 ```{r SG, cache = TRUE}
@@ -420,13 +477,13 @@ sgd <- function(
   par,
   grad, # Function of parameter and observation index
   n, # Sample size
-  gamma, # Decay schedule or a fixed learning rate
+  t, # Decay schedule or a fixed learning rate
   maxiter = 100, # Max epoch iterations
   sampler = sample, # How data is resampled. Default is a random permutation
   cb = NULL,
   ...
 ) {
-  gamma <- if (is.function(gamma)) gamma(1:maxiter) else rep(gamma, maxiter)
+  t <- if (is.function(t)) t(1:maxiter) else rep(t, maxiter)
   for (k in 1:maxiter) {
     if (!is.null(cb)) {
       cb()
@@ -434,14 +491,14 @@ sgd <- function(
     samp <- sampler(n)
     for (j in 1:n) {
       i <- samp[j]
-      par <- par - gamma[k] * grad(par, i, ...)
+      par <- par - t[k] * grad(par, i, ...)
     }
   }
   par
 }
 ```
 
-## Poisson Regression Model, Batch Learning
+## Poisson Regression Model, Mini-Batch Learning
 
 ```{r pois-gradient, dependson="SG", echo=-1, cache = TRUE}
 set.seed(17102020)
@@ -456,7 +513,7 @@ grad_pois <- function(par, i) (mu(z[i], par) - y[i]) * c(1, z[i])
 ```{r batch-poisson-SG, dependson="pois-gradient"}
 library(CSwR)
 pois_SG_tracer <- tracer("par", Delta = 0)
-rate <- decay_scheduler(gamma0 = 0.02, gamma1 = 0.001, n1 = 1000)
+rate <- decay_scheduler(t0 = 0.02, t1 = 0.001, n1 = 1000)
 sgd(c(0, 0), grad_pois, n, rate, 1000, cb = pois_SG_tracer$tracer)
 ```
 
@@ -477,8 +534,8 @@ n <- 500 # Larger sample size
 z <- runif(n, -1, 1)
 y <- rpois(n, mu(z, beta_true))
 pois_SG_tracer_2 <- tracer("par", Delta = 0)
-rate <- decay_scheduler(gamma0 = 0.02, gamma1 = 0.001, n1 = 100)
-sgd(c(0, 0), grad_pois, n = n, gamma = rate, cb = pois_SG_tracer_2$tracer)
+rate <- decay_scheduler(t0 = 0.02, t1 = 0.001, n1 = 100)
+sgd(c(0, 0), grad_pois, n = n, t = rate, cb = pois_SG_tracer_2$tracer)
 ```
 
 . . .
@@ -490,7 +547,9 @@ beta_hat_2 <- coefficients(glm(y ~ z, family = poisson))
 cat("beta_hat_2:", beta_hat_2)
 ```
 
-```{r batch-pois-sgd-fig, echo=FALSE, dependson="online_poisson_SG", warning=FALSE, fig.height=6, fig.width=10, fig.cap = "Convergence for the Poisson regression problem using different batch sizes."}
+##
+
+```{r batch-pois-sgd-fig, echo=FALSE, dependson="online_poisson_SG", warning=FALSE, fig.height=3, fig.width=5.1, fig.cap = "Convergence for the Poisson regression problem using different batch sizes."}
 hline_data <- data.frame(
   beta0 = c(beta_hat[1], beta_hat_2[1]),
   beta1 = c(beta_hat[2], beta_hat_2[2]),
@@ -542,14 +601,16 @@ ls_model <- function(X, y) {
 }
 ```
 
-### Data Example
+## Data Example
 
 ```{r news-data, message=FALSE, cache = TRUE}
-news <- readr::read_csv(here::here("data", "online_news_popularity.csv"))
+news <- readr::read_csv(
+  here::here("data", "online_news_popularity.csv")
+)
 dim(news)
 ```
 
-. . .
+##
 
 ```{r news-X-y, dependson="news-data", cache = TRUE}
 news <- dplyr::select(
@@ -568,7 +629,7 @@ X <- model.matrix(shares ~ . - 1, data = news)
 y <- log(news$shares)
 ```
 
-### Implementation
+## Implementation
 
 ```{r LS-model, dependson=c("ls-model", "news-X-y")}
 X_raw <- X
@@ -588,35 +649,41 @@ system.time(lm_news <- lm.fit(X, y))
 par_hat <- coefficients(lm_news)
 ```
 
-### Objective and Gradient Values
+## Objective and Gradient Values
 
 ```{r}
 f(par_hat)
 ```
 
---
+. . .
 
 ```{r}
 range(grad_obs(rep(0, ncol(X)), 100))
 range(grad_obs(par_hat, 100))
 ```
 
-### Running the SGD Algorithm
+## Running the SGD Algorithm
 
 ```{r SG-tracer, cache = TRUE, results = "hide"}
-sgd_tracer <- tracer("value", expr = quote(value <- f(par)), Delta = 0)
+sgd_tracer <- tracer(
+  "value",
+  expr = quote(value <- f(par)),
+  Delta = 0
+)
+
 sgd(
   par0,
   grad = grad_obs,
   n = nrow(X),
-  gamma = 1e-5,
+  t = 1e-5,
   maxiter = 50,
   cb = sgd_tracer$tracer
 )
+
 sgd_trace_low <- summary(sgd_tracer)
 ```
 
-. . .
+##
 
 :::: {.columns}
 
@@ -638,7 +705,7 @@ f(par_hat)
 
 ::::
 
-### Three Additional Variants
+## Three Additional Variants
 
 ```{r GD, echo = FALSE}
 gd <- function(
@@ -647,12 +714,12 @@ gd <- function(
   gr,
   d = 0.8,
   c = 0.1,
-  gamma0 = 0.01,
+  t0 = 0.01,
   epsilon = 1e-4,
   maxiter = 1000,
   cb = NULL
 ) {
-  gamma <- gamma0
+  t <- t0
   for (i in 1:maxiter) {
     value <- f(par)
     grad <- gr(par)
@@ -665,11 +732,11 @@ gd <- function(
       break
     }
     # Proposed descent step
-    par1 <- par - gamma * grad
+    par1 <- par - t * grad
     # Backtracking while descent is insufficient
-    while (f(par1) > value - c * gamma * h_prime) {
-      gamma <- d * gamma
-      par1 <- par - gamma * grad
+    while (f(par1) > value - c * t * h_prime) {
+      t <- d * t
+      par1 <- par - t * grad
     }
     par <- par1
   }
@@ -680,7 +747,7 @@ gd <- function(
 }
 ```
 
-#### Fixed but higher learning rate
+### Fixed but higher learning rate
 
 ```{r SG-tracer-2, results="hide"}
 sgd_tracer$clear()
@@ -688,43 +755,46 @@ sgd(
   par0,
   grad_obs,
   n = nrow(X),
-  gamma = 5e-5,
+  t = 5e-5,
   maxiter = 50,
   cb = sgd_tracer$tracer
 )
 sgd_trace_high <- summary(sgd_tracer)
 ```
 
-. . .
-
-#### Decay Schedule
+## Decay Schedule
 
 ```{r SG-tracer-3, results="hide"}
 sgd_tracer$clear()
-rate <- decay_scheduler(gamma0 = 1e-3, gamma1 = 1e-5, a = 0.6, n1 = 50)
+rate <- decay_scheduler(
+  t0 = 1e-3,
+  t1 = 1e-5,
+  a = 0.6,
+  n1 = 50
+)
 sgd(
   par0,
   grad_obs,
   n = nrow(X),
-  gamma = rate,
+  t = rate,
   maxiter = 50,
   cb = sgd_tracer$tracer
 )
 sgd_trace_decay <- summary(sgd_tracer)
 ```
 
---
-
-#### Full-Batch Gradient Descent with Line Search
+## Full-Batch Gradient Descent with Line Search
 
 ```{r News-GD, warning=FALSE, results='hide', dependson="GD"}
 grad_f <- function(beta) crossprod(X, X %*% beta - y) / nrow(X)
 gd_tracer <- tracer("value", Delta = 10)
-gd(par0, f, grad_f, gamma = 1, maxiter = 800, cb = gd_tracer$tracer)
+gd(par0, f, grad_f, t = 1, maxiter = 800, cb = gd_tracer$tracer)
 gd_trace <- summary(gd_tracer)
 ```
 
-```{r news-trace-plot, echo=FALSE, dependson=c("News-GD", "SG-tracer-2", "SG-tracer-sum"), fig.width=10, fig.height=6, fig.cap = "A comparison of the four algorithms"}
+##
+
+```{r news-trace-plot, echo=FALSE, dependson=c("News-GD", "SG-tracer-2", "SG-tracer-sum"), fig.width=5.2, fig.height=3, fig.cap = "A comparison of the four algorithms"}
 dplyr::bind_rows(
   low = sgd_trace_low,
   high = sgd_trace_high,
@@ -769,36 +839,76 @@ dplyr::bind_rows(
 
 ## Exercise
 
-Recall that our learning rate schedule is
-$$\gamma_k = \frac{\gamma_0 K}{K + k^a}$$ with initial learning rate
-$\gamma_0 > 0$ and constants $K, a > 0$, with convergence ensured if
-$a \in (0.5, 1]$.
+We will attempt to minimize the following function:^[This is actually ridge
+regression with a single predictor.]
+$$
+F(\beta; x, y, \lambda) = \frac{1}{n} f_i(\beta; x, y, \lambda) = \frac{1}{2n} \sum_{i=1}^n (y_i - x_i \beta)^2 + \frac{\lambda}{2} \beta^2
+$$
 
 . . .
 
-### Steps
+```{r}
+#| echo: false
+#| include: false
+f <- function(beta, xx, yy, lambda) {
+  sum(0.5 * (xx * beta - yy)^2 + 0.5 * lambda * beta^2)
+}
 
-- Take your SGD algorithm and implement the learning rate scheduler that we
-  introduced previously. --
+f_grad <- function(beta, i, xx, yy, lambda) {
+  (xx[i] * beta - yy[i]) * xx[i] + 2 * lambda * beta
+}
 
-- Run the algorithm on the same simple linear regression problem in two
-  dimensions. --
+beta <- 3
 
-- Experiment with different values of $K$ and $a$.
+x <- rnorm(100)
+y <- x * beta + rnorm(100)
+
+beta_grid <- seq(-2, 5, length.out = 200)
+
+f_vec <- Vectorize(f, vectorize.args = "beta")
+
+plot(beta_grid, f_vec(beta_grid, x, y, 0.6), type = "l")
+```
+
+### Step 1
+
+Implement a stochastic gradient descent method for solving this problem. Plot convergence
+in terms of epochs and time. 
+
+. . .
+
+### Step 2
+
+Test and benchmark your implementation against R's built-in `optimize()`.
+
+. . .
+
+### Step 3
+
+Try different learning rates and, if you have time, implement mini-batch SGD.
 
 ## Summary
 
-- Stochastic gradient descent is a popular optimization method for large-scale
-  optimization --
+ Stochastic gradient descent is a popular optimization method for large-scale
+optimization
 
-- Convergence results are relatively weak, but for many applications this does
-  not matter. --
+\medskip\pause
 
-- In practice, most implementations use mini-batches.
+Convergence results are relatively weak, but for many applications this does
+not matter.
+
+\medskip\pause
+
+In practice, most implementations use mini-batches.
 
 . . .
 
 ## Next Time
 
-- How to improve SGD using momentum and adaptive learning rates
-- Use Rcpp to improve performance of our SGD algorithms
+### Rcpp
+
+We will look at how to use Rcpp to speed up R code.
+
+\medskip\pause
+
+This will be very useful for implementing optimization algorithms later on.
